# policy-pilot

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  otel-collector-config.yaml
cypher-builder-svc/: Dockerfile  README.md  pyproject.toml
cypher-builder-svc/src/cbs/: __init__.py  config.py  entity_plan.py  main.py  models.py  planner.py  routes.py
cypher-builder-svc/tests/: test_health.py  test_plan.py  test_validate.py
docs/: data-flow.md  (+19 more)
security-event-chat/: README.md  pyproject.toml
security-event-chat/regression/: README.md  __init__.py  runner.py  seed.py
security-event-chat/src/chat_application/: config.py  cypher.py  main.py  models.py  neo4j.py  ollama.py  qdrant.py  rag.py  reranker.py
security-event-chat/tests/: conftest.py  test_main.py  test_models.py  test_neo4j.py  test_ollama.py  test_qdrant.py  test_rag_helpers.py  test_reranker.py
security-event-qdrant-etl/: README.md  pyproject.toml
security-event-qdrant-etl/src/etl/: authorization_context.py  config.py  enrichment.py  health.py  instruction_client.py  instruction_consumer.py  instruction_pipeline.py  instruction_security_event_consumer.py  kafka_consumer.py  main.py  neo4j_client.py  ollama_client.py  payment_consumer.py  payment_pipeline.py  pipeline.py  qdrant_store.py
security-event-qdrant-etl/tests/: test_cypher_validation.py  test_health.py  test_instruction_security_event_pipeline.py  test_main_api.py  test_ollama_client.py  test_pipelines.py
sequence-service/: Dockerfile  README.md  pyproject.toml
sequence-service/src/seq/: config.py  database.py  formatting.py  main.py  models.py  repository.py  routes.py  service.py
sequence-service/tests/: conftest.py  test_config.py  test_formatting.py  test_integration.py  test_repository.py  test_routes.py
shared/cypher_builder/: README.md  pyproject.toml
shared/cypher_builder/tests/: test_builder.py  test_coverage_intents.py  test_entity_id.py  test_facets.py  test_lob_scope.py
shared/cypher_gen/: pyproject.toml
shared/cypher_gen/tests/: test_extract.py  test_prompts.py  test_validation.py
shared/platform_auth/: pyproject.toml
shared/platform_auth/tests/: test_deps.py  test_login.py
shared/sequence_client/: pyproject.toml
shared/sequence_client/tests/: test_client.py
shared/telemetry/: pyproject.toml
shared/telemetry/tests/: conftest.py  test_gen_ai.py  test_http_logging.py  test_logging_filter.py  test_redaction.py  test_setup.py
shared/vertex_client/: pyproject.toml
shared/vertex_client/tests/: test_embeddings.py  test_generation.py
shared/zitadel_directory/: README.md  pyproject.toml
shared/zitadel_directory/tests/: test_cache_and_build.py  test_list_users.py
ssi-chat/: Dockerfile  README.md  pyproject.toml  regression-report.json
ssi-chat/regression/: GOLDEN_EVAL.md  README.md  api_smoke.py  assertions.py  auth_helpers.py  eval_golden.yaml  eval_metrics.py  models.py  questions.yaml  runner.py  seed.py
ssi-chat/src/chat_application/: auth.py  authorization_client.py  authz_obo_client.py  capabilities.py  config.py  cypher.py  dependencies.py  eligibility.py  feedback_observability.py  formatting.py  main.py  ml_client.py  models.py  multimodal_ids.py  multimodal_search.py  neo4j_formatters.py  neo4j_intents.py  ollama.py  person_permissions.py  policy_directory.py  prompts.py  qdrant.py  rag.py  reranker.py  response_formatter.py  routing_observability.py  service_identity.py  subject.py  users.py  vector_search.py  zitadel_auth.py
ssi-chat/tests/: conftest.py  test_api_smoke.py  test_approve_payment_skill.py  test_auth_routes.py  test_authorization_client.py  test_authorization_client_async.py  test_authorization_client_instruction.py  test_authz_obo_client.py  test_cancel_payment_skill.py  test_chat_regression.py  test_config.py  test_create_payment_early_paths.py  test_create_payment_skill.py  test_cypher.py  test_dependencies.py  test_downvote_bugs_integration.py  test_eligibility.py  test_eval_metrics.py  test_feedback_observability.py  test_follow_up.py  test_formatter_dispatch_parity.py  test_formatting.py  test_formatting_and_neo4j_formatters.py  test_gemini_errors.py  test_handler_registry.py  test_instruction_inventory_filters.py  test_main.py  test_me_handlers_dispatch.py  test_me_intents.py  test_ml_client.py  test_models.py  test_multimodal_search.py  test_neo4j.py  test_neo4j_intents.py  test_ollama.py  test_person_permissions.py  test_pipeline.py  test_policy_directory.py  test_policy_summary.py  test_rag_eligibility.py  (+19 more)
ssi-chat/tests/fixtures/: __init__.py  router_decisions.py
ssi-demo-harness/: Dockerfile  README.md  bulk_scale_seed.py  patch_neo4j_timestamps.py  pyproject.toml  seed-demo-data.sh  seed_cross_entity_reciprocal.py  seed_mutual_approval.py
ssi-demo-harness/src/harness/: __init__.py  actions.py  admin.py  app.py  auth.py  auth_routes.py  config.py  dependencies.py  fixtures.py  helpers.py  ilm_client.py  instruction_client.py  payment_client.py  results.py  run.py  service_identity.py
ssi-demo-harness/tests/: test_actions.py  test_admin.py  test_app.py  test_approver_selection.py  test_config.py  test_dependencies.py  test_fixtures.py  test_helpers.py  test_helpers_extended.py  test_payment_approver_selection.py  test_results.py  test_update_payments.py
ssi-indexer/: Dockerfile  README.md  pyproject.toml
ssi-indexer/search-profiles/: README.md  instruction_security_event.yaml  instruction_state.yaml  payment_fact.yaml  payment_security_event.yaml
ssi-indexer/tests/: conftest.py  helpers.py  test_admin.py  test_authorization_context.py  test_consumers.py  test_cypher_validation.py  test_dependencies.py  test_dlq.py  test_enrichment.py  test_graph_model.py  test_health.py  test_instruction_security_event_pipeline.py  test_kafka_deserialize.py  test_kafka_offsets.py  test_main_api.py  test_main_lifespan.py  test_mongo_cdc.py  test_multimodal_store.py  test_multimodal_write.py  test_neo4j_client.py  test_ollama_client.py  test_pipelines.py  test_qdrant_store.py  test_search_profiles.py  test_search_text.py  test_search_text_transforms.py
(+877 files in other folders)
