[project]
name = "cypher-builder-svc"
version = "0.1.0"
description = "HTTP bridge wrapping shared/cypher_builder for ssi-chat-j neo4j_direct"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "cypher-builder",
    "ssi-telemetry",
]

[project.scripts]
cypher-builder-svc = "cbs.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cbs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["cbs"]
omit = ["src/cbs/main.py"]

[tool.coverage.report]
fail_under = 80
