[project]
name = "security-event-qdrant-etl"
version = "0.1.0"
description = "Kafka ETL to Neo4j + Qdrant with hybrid search console"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiokafka>=0.12.0",
    "neo4j>=5.26.0",
    "qdrant-client>=1.15.2",
    "httpx>=0.28.0",
]

[project.scripts]
security-event-search = "etl.main:run"
security-event-monitor = "etl.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["etl"]
