[project]
name = "sequence-service"
version = "0.1.0"
description = "Atomic business ID allocation for instructions and payments"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "ssi-telemetry",
]

[project.scripts]
sequence-service = "seq.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: live MongoDB tests (set RUN_SEQUENCE_INTEGRATION=1)",
]

[tool.coverage.run]
omit = ["src/seq/main.py"]

[tool.coverage.report]
fail_under = 80
