[project]
name = "platform-auth"
version = "0.1.0"
description = "Shared PLATFORM_ADMIN authentication helpers for SSI demo services"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "ssi-telemetry",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["platform_auth"]

[tool.coverage.report]
fail_under = 70

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
